# Mnemosyne

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  backlog.md  checklist.md  complexity_audit.md  gap_analysis_external.md  gap_audit.md
.config/: nextest.toml
benchmarks/: allocator_baseline_excerpt.csv  allocator_baseline_metadata.md  allocator_comparison.md  mimalloc_bench_mapping.md
crates/mnemosyne/: Cargo.toml
crates/mnemosyne-arena/: Cargo.toml
crates/mnemosyne-arena/src/: arena.rs  huge_pool.rs  lib.rs  numa.rs  scratch.rs  segment.rs
crates/mnemosyne-arena/src/arena/: tests.rs
crates/mnemosyne-arena/src/scratch/: aligned_vec.rs  bank.rs  element.rs  mod.rs  pool.rs  tests.rs
crates/mnemosyne-arena/src/segment/: alignment.rs  alloc.rs  mod.rs  pool.rs  stats.rs  tests.rs  utils.rs
crates/mnemosyne-arena/src/segment/pool/: cache_aligned.rs  huge_pool.rs  list.rs  mod.rs  numa_bucket.rs  segment_pool.rs  tagged_stack.rs
crates/mnemosyne-arena/tests/: huge_pool_concurrency.rs  segment_pool_concurrency.rs
crates/mnemosyne-backend/: Cargo.toml
crates/mnemosyne-backend/src/: cuda.rs  guard.rs  lib.rs  mapping.rs  recorders.rs  reset.rs  telemetry.rs  unix.rs  windows.rs
crates/mnemosyne-backend/src/backends/: mod.rs  unix.rs  wgpu.rs  windows.rs
crates/mnemosyne-backend/src/backends/cuda/: context.rs  loader.rs  mod.rs  registry.rs  veh.rs
crates/mnemosyne-benchmarks/: Cargo.toml  build.rs
crates/mnemosyne-benchmarks/benches/: allocator_bench.rs  segment_lock.rs  tls_bench.rs
crates/mnemosyne-benchmarks/benches/allocator/: allocation.rs  compat.rs  constants.rs  cross_thread.rs  failure.rs  helpers.rs  latency.rs  mod.rs  platform.rs  profiler.rs  realloc.rs  registration.rs  segment.rs  throughput.rs  workers.rs
crates/mnemosyne-benchmarks/src/: lib.rs
crates/mnemosyne-build-util/: Cargo.toml
crates/mnemosyne-build-util/src/: lib.rs
crates/mnemosyne-c-shim/: Cargo.toml  README.md
crates/mnemosyne-c-shim/examples/: interpose_demo.c  run_demo.ps1  run_demo.sh
crates/mnemosyne-c-shim/include/: mnemosyne.h
crates/mnemosyne-c-shim/src/: lib.rs  tests.rs
crates/mnemosyne-core/: Cargo.toml
crates/mnemosyne-core/src/: abort.rs  constants.rs  kernel_budget.rs  lib.rs  options.rs  policy.rs  size_class.rs  sync.rs  types.rs  validation.rs
crates/mnemosyne-core/src/types/: block.rs  owner.rs  page.rs  segment.rs  tests.rs
crates/mnemosyne-core/src/types/page/: init.rs  mod.rs  occupancy.rs  reclaim.rs
crates/mnemosyne-decay/: Cargo.toml
crates/mnemosyne-decay/src/: lib.rs
crates/mnemosyne-decay/tests/: decay_tests.rs
crates/mnemosyne-hardened/: Cargo.toml
crates/mnemosyne-hardened/src/: lib.rs
crates/mnemosyne-heap/: Cargo.toml
crates/mnemosyne-heap/src/: brand.rs  branded_box.rs  branded_heap.rs  branded_vec.rs  heap.rs  lib.rs  raw_heap.rs  tests.rs  tier.rs  tiered_backend.rs  tiered_heap.rs
crates/mnemosyne-heap/src/branded_vec/: ops.rs  traits.rs
crates/mnemosyne-heap/src/tests/: boxed.rs  cell.rs  heap.rs  tiered.rs  traits.rs  vec.rs
crates/mnemosyne-heap/tests/: heap_tests.rs
crates/mnemosyne-local/: Cargo.toml  build.rs
crates/mnemosyne-local/src/: alloc.rs  dealloc_counters.rs  free.rs  lib.rs  local_alloc.rs  options.rs  per_cpu.rs  realloc.rs  tests.rs  tls.rs  tls_slot.rs  usable_size.rs  validation.rs
crates/mnemosyne-local/src/local_alloc/: page.rs  routing.rs  segment.rs  stats.rs  tests.rs
crates/mnemosyne-local/src/local_alloc/segment/: ownership.rs  reclaim.rs
crates/mnemosyne-local/src/local_alloc/tests/: alloc_tests.rs  backend_tests.rs  cross_thread_tests.rs  fixtures.rs  fragmentation_tests.rs  list_tests.rs  mod.rs  realloc_tests.rs  reentrant_tests.rs
crates/mnemosyne-local/src/tls/: mod.rs  native.rs  nightly.rs  os_helpers.rs  stable.rs  traits.rs
crates/mnemosyne-local/tests/: dealloc_probe_instrumentation.rs  hot_path_value_semantics.rs  policy_integration_tests.rs  topology_tests.rs
crates/mnemosyne-prof/: Cargo.toml  build.rs
crates/mnemosyne-prof/src/: lib.rs  sampler.rs  tests.rs  tls.rs
crates/mnemosyne-prof/src/sampler/: capture.rs  hasher.rs  mod.rs  report.rs  sampling.rs  stack_interner.rs  store.rs
crates/mnemosyne-prof/tests/: prof_tests.rs
crates/mnemosyne/src/: lib.rs
crates/mnemosyne/tests/: global_alloc_tests.rs  scratch_reexport.rs
crates/mnemosyne/tests/global_alloc_tests/: basic.rs  leak.rs  policy.rs  realloc.rs  stats.rs
docs/adr/: 0001-free-list-encryption-mode-binding.md  0002-immutable-wgpu-callback-pair.md  0003-remove-wgpu-raw-pointer-backend.md  0004-profiler-sampler-topology.md  0005-sharded-sample-occupancy.md  0006-provider-default-msrv.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: c_shim_api.rs
fuzz/src/: c_shim_api.rs  lib.rs  op_sequence.rs
