[workspace]
resolver = "2"
members = [
    "crates/mnemosyne-core",
    "crates/mnemosyne-backend",
    "crates/mnemosyne-arena",
    "crates/mnemosyne-local",
    "crates/mnemosyne-heap",
    "crates/mnemosyne-decay",
    "crates/mnemosyne-prof",
    "crates/mnemosyne-hardened",
    "crates/mnemosyne",
    "crates/mnemosyne-c-shim",
    "crates/mnemosyne-benchmarks",
]
exclude = ["fuzz"]

# Dev/test keep line tables only: full DWARF dominates target/ size for an
# allocator workspace while backtraces need only line info. Overflow checks are
# pinned on (not left to profile defaults) because integer wraparound in size
# arithmetic is a memory-safety hazard here.
[profile.dev]
debug = "line-tables-only"
overflow-checks = true

[profile.test]
debug = "line-tables-only"
overflow-checks = true

# Release ships without debug info or symbols; profiling work uses the
# dedicated `profiling` profile below instead of re-fattening release.
[profile.release]
debug = false
strip = "symbols"

# Full debug info on optimized code, for flamegraphs and perf attribution.
[profile.profiling]
inherits = "release"
debug = true
strip = "none"
