[package]
name = "mnemosyne-arena"
license = "MIT OR Apache-2.0"
version = "0.2.1"
edition = "2024"
rust-version = "1.87"

[features]
default = ["std"]
segment-tail-guards = []
segment-header-guards = []
eunomia = ["dep:eunomia"]
std = ["mnemosyne-core/std"]

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-backend = { path = "../mnemosyne-backend" }
eunomia = { git = "https://github.com/ryancinsight/eunomia", default-features = false, optional = true }
themis = { git = "https://github.com/ryancinsight/themis", version = "0.9", default-features = false, features = ["std"] }
