[package]
name = "mnemosyne-arena"
license = "MIT OR Apache-2.0"
version = "0.3.0"
edition = "2024"
rust-version = "1.95"

[features]
default = ["std"]
segment-tail-guards = []
segment-header-guards = []
eunomia = ["dep:eunomia"]
std = ["mnemosyne-core/std"]

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-backend = { path = "../mnemosyne-backend" }
eunomia = { workspace = true, optional = true }
themis = { workspace = true }
