[package]
name = "mnemosyne-decay"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[features]
default = []

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-backend = { path = "../mnemosyne-backend" }
mnemosyne-arena = { path = "../mnemosyne-arena" }

[dev-dependencies]
mnemosyne-local = { path = "../mnemosyne-local" }
