[package]
name = "mnemosyne-decay"
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"

[features]
default = []

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-backend = { path = "../mnemosyne-backend" }
mnemosyne-arena = { path = "../mnemosyne-arena" }

[dev-dependencies]
mnemosyne-local = { path = "../mnemosyne-local" }
