[package]
name = "mnemosyne-heap"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[features]
default = []

[dependencies]
# Brand machinery (invariant-lifetime marker + thread-confined capability token)
# is sourced from melinoe, the ecosystem's branding crate. Unpinned git dep:
# resolves the default branch's tip on `cargo update`, so the heap always builds
# against the latest published brand semantics. `default-features = false` keeps
# this `#![no_std]` crate free of std/alloc.
melinoe = { workspace = true }
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-backend = { path = "../mnemosyne-backend" }
mnemosyne-arena = { path = "../mnemosyne-arena" }
mnemosyne-local = { path = "../mnemosyne-local" }
mnemosyne-prof = { path = "../mnemosyne-prof" }
# Phase 3 Stage D1 device-memory integration: themis owns PlacementHint +
# MemoryTier (atlas ADR 0002). Used here as the typed placement vocabulary
# and the host-allocatable / budget-only classification
# (MemoryTier::is_host_allocatable). Unpinned git dep: resolves to the
# default branch's tip on `cargo update`, so the heap always builds against
# the latest law semantics. `default-features = false, features = ["std"]`
# matches `mnemosyne-local`/`mnemosyne-arena` so a single themis build is
# shared by all three.
themis = { workspace = true }

[dev-dependencies]
mnemosyne = { path = "../mnemosyne" }
