[package]
name = "mnemosyne-local"
version = "0.1.0"
edition = "2021"

[features]
default = ["parallel", "mnemosyne-memory"]
parallel = []
mnemosyne-memory = []
# Replaces the portable `std::thread_local!` cache accessor with an ELF/PE
# `#[thread_local]` static, which lowers to a single segment-register-relative
# load (the mechanism mimalloc uses for `mi_heap_default`). This eliminates the
# `LocalKey::with` call and lazy-init guard from the small-allocation hot path.
# Activates only on a nightly compiler; stable `--all-features` builds fall back
# to the portable TLS provider because `#![feature(thread_local)]` is unstable.
# Thread-exit segment reclamation is preserved via a `Drop` sentinel because a
# `#[thread_local]` static is not dropped automatically on thread teardown.
nightly_tls = []
std_tls = []


[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-backend = { path = "../mnemosyne-backend" }
mnemosyne-arena = { path = "../mnemosyne-arena" }
mnemosyne-decay = { path = "../mnemosyne-decay" }
mnemosyne-prof = { path = "../mnemosyne-prof" }
themis = { git = "https://github.com/ryancinsight/themis", version = "0.8.0", default-features = false, features = ["std"] }
melinoe = { git = "https://github.com/ryancinsight/melinoe.git", version = "0.7.0", default-features = false, features = ["std"] }

[dev-dependencies]
mnemosyne-heap = { path = "../mnemosyne-heap" }
mnemosyne-hardened = { path = "../mnemosyne-hardened" }
