[package]
name = "mnemosyne-local"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[features]
default = ["std_tls"]
# Replaces the portable `std::thread_local!` cache accessor with an ELF/PE
# `#[thread_local]` static, which lowers to a single segment-register-relative
# load (the mechanism mimalloc uses for `mi_heap_default`). This eliminates the
# `LocalKey::with` call and lazy-init guard from the small-allocation hot path.
# Activates only on a nightly compiler; stable `--all-features` builds fall back
# to the portable TLS provider because `#![feature(thread_local)]` is unstable.
# Thread-exit segment reclamation is preserved via a `Drop` sentinel because a
# `#[thread_local]` static is not dropped automatically on thread teardown.
nightly_tls = []
std_tls = []
segment-tail-guards = ["mnemosyne-arena/segment-tail-guards"]
segment-header-guards = ["mnemosyne-arena/segment-header-guards"]
# Optional per-branch atomic counters for the dealloc commit paths in
# `thread_free_classified`. Off by default. Enable for benchmark-suite
# A/B sessions that surface branch-mix data through
# `mnemosyne_local::dealloc_counters::snapshot`.
#
# IMPORTANT: any `benchmark_summary --enforce-thresholds` invocation
# that gates an allocator change must run on the default-feature build,
# not on `--features dealloc-probe`; the probe intentionally adds one
# Relaxed atomic increment per deallocation commit.
dealloc-probe = []

[build-dependencies]
mnemosyne-build-util = { path = "../mnemosyne-build-util" }

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-backend = { path = "../mnemosyne-backend" }
mnemosyne-arena = { path = "../mnemosyne-arena" }
mnemosyne-decay = { path = "../mnemosyne-decay" }
mnemosyne-prof = { path = "../mnemosyne-prof" }
themis = { git = "https://github.com/ryancinsight/themis", version = "0.9", default-features = false, features = ["std"] }
melinoe = { git = "https://github.com/ryancinsight/melinoe.git", version = "0.9.0", default-features = false, features = ["std"] }

[dev-dependencies]
mnemosyne-heap = { path = "../mnemosyne-heap" }
mnemosyne-hardened = { path = "../mnemosyne-hardened" }
