[package]
name = "mnemosyne-prof"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[dependencies]
mnemosyne-core = { path = "../mnemosyne-core" }
backtrace = "0.3"

[build-dependencies]
mnemosyne-build-util = { path = "../mnemosyne-build-util" }

[features]
nightly_tls = []
std_tls = []

[dev-dependencies]
mnemosyne = { path = "../mnemosyne" }
mnemosyne-local = { path = "../mnemosyne-local" }
mnemosyne-heap = { path = "../mnemosyne-heap" }
mnemosyne-backend = { path = "../mnemosyne-backend" }
