[package]
name = "mnemosyne"
version = "0.2.0"
edition = "2021"

[dependencies]
mnemosyne-local = { path = "../mnemosyne-local" }
mnemosyne-heap = { path = "../mnemosyne-heap", optional = true }
mnemosyne-arena = { path = "../mnemosyne-arena" }
mnemosyne-backend = { path = "../mnemosyne-backend" }
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-hardened = { path = "../mnemosyne-hardened" }
mnemosyne-decay = { path = "../mnemosyne-decay" }
mnemosyne-prof = { path = "../mnemosyne-prof" }
num-complex = { version = "0.4", optional = true }

[features]
default = ["branded"]
branded = ["dep:mnemosyne-heap"]
nightly_tls = ["mnemosyne-local/nightly_tls", "mnemosyne-prof/nightly_tls"]
num-complex = ["dep:num-complex", "mnemosyne-arena/num-complex"]
