[package]
name = "mnemosyne"
version = "0.2.0"
edition = "2024"
rust-version = "1.87"

[dependencies]
mnemosyne-local = { path = "../mnemosyne-local" }
mnemosyne-heap = { path = "../mnemosyne-heap", optional = true }
mnemosyne-arena = { path = "../mnemosyne-arena" }
mnemosyne-backend = { path = "../mnemosyne-backend" }
mnemosyne-core = { path = "../mnemosyne-core" }
mnemosyne-hardened = { path = "../mnemosyne-hardened" }
mnemosyne-decay = { path = "../mnemosyne-decay" }
mnemosyne-prof = { path = "../mnemosyne-prof" }
eunomia = { path = "../../../eunomia/crates/eunomia", default-features = false, optional = true }

[features]
default = ["mnemosyne-memory", "std_tls"]
mnemosyne-memory = ["branded"]
branded = ["dep:mnemosyne-heap"]
nightly_tls = ["mnemosyne-local/nightly_tls", "mnemosyne-prof/nightly_tls"]
std_tls = ["mnemosyne-local/std_tls", "mnemosyne-prof/std_tls"]
eunomia = ["dep:eunomia", "mnemosyne-arena/eunomia"]
segment-tail-guards = ["mnemosyne-arena/segment-tail-guards"]
segment-header-guards = ["mnemosyne-arena/segment-header-guards"]
